# comp-graphics-homework

./: .gitignore  CMakeLists.txt  README.md
animation_film/: SimpleFragmentShader.fragmentshader  linux_amination_film
animations/: .gitignore  README.md
animations/animation_film/: SimpleVertexShader.vertexshader  animation_film.cpp
animations/crossed_triangles/: crossed_triangles.cpp
animations/cylinder/: SimpleVertexShader.vertexshader
common/: quaternion_utils.cpp
crossed_triangles/: SimpleVertexShader.vertexshader  linux_crossed_triangles
cylinder/: SimpleFragmentShader.fragmentshader  cylinder.cpp  linux_cylinder
shooter/: README.md
